# esterownik

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: DataCollector.h  DataParser.h  DataSource.h  EcoalDataCollector.h  EcoalDataParser.h  EcoalDataSource.h
src/: EcoalDataCollector.cpp  EcoalDataParaser.cpp  EcoalDataSource.cpp
test/: CMakeLists.txt  main.cpp
